2007-11-08  Alp Toker  <alp@atoker.com>

Reviewed by Mark Rowe.

        http://bugs.webkit.org/show_bug.cgi?id=15653
        [GTK] Text editor does not handle common keystrokes

        Handle more keystrokes in EditorClientGtk. Note that this is a
        temporary measure pending a proper solution using GtkBindingSet (see
        http://bugs.webkit.org/show_bug.cgi?id=15911).

        * WebCoreSupport/EditorClientGtk.cpp:
        (WebKit::EditorClient::handleKeypress):


Canonical link: https://commits.webkit.org/21545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27624 268f45cc-cd09-0410-ab3c-d52691b4dbfc